<resources>
    <string name="app_name">Bpp</string>

    <string name="auth_title"><b>바프플래너</b>에서\n바디프로필을 한눈에</string>
    <string name="home_sub_title">스튜디오 찾으세요?</string>
    <string name="home_title">한 눈에 확인하고\n비교해보세요!</string>
    <string name="concept_title">원하는 컨셉의\n스튜디오를 찾아보세요</string>
    <string name="my_page_title">%s님\n환영합니다!</string>

    <string name="studio_filter_title">스튜디오 지역 선택</string>
    <string name="concept_filter_title">컨셉 필터</string>
    <string name="concept_filter_person">인원</string>
    <string name="concept_filter_gender">성별</string>
    <string name="concept_filter_background">배경</string>
    <string name="concept_filter_props">소품</string>
    <string name="concept_filter_cloth">의상</string>

    <string name="all_studio">스튜디오</string>
    <string name="all_makeup">헤어메이크업</string>
    <string name="all_select">선택 완료</string>
    <string name="all_portfolio">포트폴리오</string>
    <string name="all_detail_info">상세 정보</string>
    <string name="all_price">가격</string>
    <string name="all_location">위치</string>
    <string name="all_partnership">제휴업체</string>
    <string name="all_inquiring">문의 중</string>
    <string name="all_reservation_confirm">예약 확정</string>
    <string name="all_setting">설정</string>
    <string name="withdraw_waring_1">회원탈퇴 진행 시 기존에 사용하셨던 아이디를 다시 사용하실 수 없습니다.</string>
    <string name="withdraw_waring_2">회원정보 및 개인형 서비스의 데이터는 지체없이 파기 절차가 진행되어 복구할 수 없습니다.</string>

    <string name="networ_error">네트워크 에러가 발생하였습니다. 잠시 후 다시 시도해주세요</string>
</resources>