<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="ifContentScrolls">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

            <TextView
                    style="@style/Text.Basic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_price" />

            <ImageView
                    android:id="@+id/iv_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <TextView
                    style="@style/Text.Basic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/all_location" />

            <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/tv_location"
                    style="@style/Text.Date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="asdfasdfadfadsf" />


            <TextView
                    style="@style/Text.Basic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/all_partnership" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
